# docker-ps3netsrv

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.arm32v6  Dockerfile.arm64v8  Dockerfile.debian  README.md  alpine.Dockerfile  slim.Dockerfile
.github/: ps3netsrv-filter.jq  ps3netsrv-history.json
.github/ISSUE_TEMPLATE/: help.md  (+3 more)
hooks/: .config  build  post_checkout  post_push  pre_build  push
ps3netsrv-builder/: run.sh
ps3netsrv-builder/builder/: File.cpp  File.h  LICENSE.TXT  Make.sh  Makefile  README.md  VIsoFile.cpp  _make.bat  build.sh  meson.build  netiso.h  scandir.c
ps3netsrv-builder/builder/bins/old/: ps3netsrv-src-nvrbst-r2.7z
ps3netsrv-builder/builder/bins/old/Linkstations (arms_mips_ppc)/: ps3netsrv.c  ps3netsrv_arm  ps3netsrv_mips
ps3netsrv-builder/builder/bins/old/linux/linux.1.43.20/: ps3netsrv32  ps3netsrv64
ps3netsrv-builder/builder/bins/old/linux/linux.1.43.28/: ps3netsrv32  ps3netsrv64
ps3netsrv-builder/builder/bins/old/linux/linux.2013/: ps3netsrv32
ps3netsrv-builder/builder/bins/old/mips32/: readme
ps3netsrv-builder/builder/bins/old/raspberry_pi/raspberry_pi.20151130/: ps3netsrv-pi_src.rar  readme.txt
ps3netsrv-builder/builder/bins/old/raspberry_pi/raspberry_pi.20160923/: ps3netsrv  ps3netsrv-pi_src.rar  readme.txt
ps3netsrv-builder/builder/include/: AbstractFile.h  File.h  File_mbedtls.h  VIsoFile.h  dirent2.h  iso9660.h  netiso.h
ps3netsrv-builder/builder/src/: File.cpp  File_mbedtls.cpp  VIsoFile.cpp  compat.c  dirent.c  main.cpp  scandir.c
rootfs/: startapp.sh
tests/: setup-test-structure.sh
(+33 files in other folders)
